--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "^10.13.0",
-    "next": "14.2.5",
+    "create-next-app": "^14.2.7",
+    "firebase": "^10.13.1",
+    "next": "^14.2.8",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-spinners": "^0.14.1",
-    "sonner": "^1.5.0"
+    "sonner": "^1.5.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "eslint": "^8",
